# linear_canonical_transform

./: .cursorrules  .gitignore  LICENSE  Package.swift  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: api.md  lct_math.md  release_checklist.md
docs/guides/: mlx-backend-dev-guide.md  visionos-spatial-visualizer-dev-guide.md
examples/: mlx_quickstart.py  property_diagnostics.py  quickstart.py
paper/: nanogpt_lct_note.md  report.md  submission_audit.md
paper/baylearn/: README.md  baylearn2026.tex
paper/experiments/: mps_shakespeare_protocol.md
paper/results/: bench_mac_local.json  modal_a100_microbench.json  modal_gpu_sweep.json  modal_h100_learnable_s1.json  modal_linux_smoke.json  modal_train_1024_s1.json  modal_train_1024_s2.json  modal_train_matched_s1.json  modal_train_matched_s2.json  mps_extended_matched212_s1.json  mps_extended_s1.json  mps_healthy212_s1.json  mps_main_group1_s1.json  mps_main_group1_s2.json  mps_main_group1_s3.json  mps_main_group1_s4.json  mps_main_matched212_s1.json  mps_main_matched212_s2.json  mps_main_matched212_s3.json  mps_main_matched212_s4.json  mps_matched172_s1.json  mps_pilot2_lr1e-3.json  mps_pilot2_lr3e-3.json  mps_pilotB_comp_inv.json  mps_pilotB_comp_noinv.json  mps_pilotB_uni_inv.json  mps_pilotB_uni_noinv.json  mps_pilot_lr1e-3.json  mps_pilot_lr1e-4.json  mps_pilot_lr3e-4.json  nanogpt_linear_angle_sweep.json  nanogpt_linear_angle_sweep_gradfix.json  nanogpt_local_tune.json  nanogpt_local_tune_linear_only.json  nanogpt_local_tune_linear_only_gradfix.json  nanogpt_mps_inverse_false_sweep.json  nanogpt_mps_sweep.json  nanogpt_norm_tradeoff_mps.json  nanogpt_param_efficiency_mps.json  std_extended_s1.json  (+18 more)
ralph/: PRD.md  progress.txt
scripts/: analyze_mps_main.py  bench_linear.py  bench_mac_local.py  bench_nanogpt.py  modal_gpu_sweep.py  modal_h100_learnable.py  modal_linux_smoke.py  modal_width_experiment.py  plot_mps_study.py  smoke_dist.py  train_nanogpt_lct.py  tune_nanogpt_lct.py  verify_release.py
site/: README.md  package-lock.json  package.json
site/.openai/: hosting.json
site/app/: globals.css  layout.tsx  page.tsx
site/tests/: rendered-html.test.mjs
site/worker/: index.ts
src/lct_activation/: __init__.py  cli.py  doctor.py  layers.py  mlx.py  properties.py  results.py  triton_ops.py
src/lct_activation/functional/: __init__.py  chirpz.py  frft.py  lct.py
src/lct_activation/integrations/: __init__.py  nanogpt.py
src/linear_canonical_transform/: __init__.py  daft.py  torch_frft.py
swift/LCTSpatial/: Package.swift  README.md
swift/LCTSpatial/Sources/LCTSpatial/: Complex32.swift  ComplexField.swift  MeshGeometry.swift  PhaseColor.swift  SL2CMatrix.swift
swift/LCTSpatial/Sources/LCTSpatialMetal/: LCTSpatialMetal.swift  MetalCanonicalPreview.swift  MetalLCTTransformer.swift
swift/LCTSpatial/Sources/LCTSpatialMetal/Shaders/: LCTKernels.metal
swift/LCTSpatial/Tests/LCTSpatialMetalTests/: MetalLCTTransformerTests.swift
swift/LCTSpatial/Tests/LCTSpatialTests/: LCTSpatialTests.swift
swift/LCTVision/: README.md  project.yml
swift/LCTVision/LCTVision/: ArgandPad.swift  ControlDeck.swift  DemoGeometry.swift  Info.plist  LCTPreset.swift  LCTStudioModel.swift  LCTVisionApp.swift  SpatialScene.swift  SpectralCloud.swift  StudioView.swift
swift/LCTVision/LCTVision.xcodeproj/: project.pbxproj
swift/LCTVision/LCTVision.xcodeproj/xcshareddata/xcschemes/: LCTVision.xcscheme
tests/: test_activation.py  test_cli_outputs.py  test_compat_package.py  test_doctor.py  test_lct.py  test_lct_core.py  test_lct_hypothesis.py  test_lct_kernels.py  test_lct_layer.py  test_lct_linear.py  test_lct_properties.py  test_linear_input_gradients.py  test_mlx_backend.py  test_nanogpt_patch.py  test_package_metadata.py  test_public_docs.py  test_results.py  test_smoke_dist.py  test_special_cases.py  test_spectral_frft.py  test_verify_release.py
