[project]
name = "lct-activation"
version = "0.1.0"
description = "Fast PyTorch Linear Canonical Transform activations and NanoGPT integration."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bidict>=0.23.1",
    "einops>=0.8.1",
    "jaxtyping>=0.3.2",
    "numpy>=1.26",
    "torch>=2.2",
    "tiktoken>=0.7.0",
    "tqdm>=4.67.1",
    "tyro>=0.8.14",
    "wandb>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lct_activation"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = true

